Crash when trying to make the actual .blend file a relocated linked library into itself #81656

Closed
opened 2020-10-12 18:19:51 +02:00 by Lucas Schlindwein · 4 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38

Blender Version
Broken: version: 2.83.7, branch: master, commit date: 2020-09-30 06:12, hash: 192e591af9

Short description of error
So, I'm investigating a frequent crash that is happening in production regarding linked files and saving the blend file.
While investigating this, I notice that if you have a linked library (say, a collection) in your blend file, and you press "relocate", if you select the file that you're working right now (by mistake or whatever reason), Blender always crashes because you're trying to link the file in itself.
I believe the expected behaviour in this case should be Blender displaying an error saying that you cannot link the file in itself, rather than crashing every time.

Exact steps for others to reproduce the error
Based on the startup file:

  • Create a new file, let's call it "first file"
  • Create a second file, let's call it "linked file"
  • Open the "first file" and link the "linked file" collection there.
  • While still working on the "first file", switch the outliner view to the Blender File layout; right-click on the linked library and press Relocate
  • Choose the "first file" that you're working right now
  • Blender will crash immediately.
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38 **Blender Version** Broken: version: 2.83.7, branch: master, commit date: 2020-09-30 06:12, hash: `192e591af9` **Short description of error** So, I'm investigating a frequent crash that is happening in production regarding linked files and saving the blend file. While investigating this, I notice that if you have a linked library (say, a collection) in your blend file, and you press "relocate", if you select the file that you're working right now (by mistake or whatever reason), Blender always crashes because you're trying to link the file in itself. I believe the expected behaviour in this case should be Blender displaying an error saying that you cannot link the file in itself, rather than crashing every time. **Exact steps for others to reproduce the error** Based on the startup file: - Create a new file, let's call it *"first file"* - Create a second file, let's call it *"linked file"* - Open the *"first file"* and link the *"linked file"* collection there. - While still working on the *"first file",* switch the outliner view to the *Blender File* layout; right-click on the linked library and press *Relocate* - Choose the *"first file"* that you're working right now - Blender will crash immediately.

Added subscriber: @Xlindvain

Added subscriber: @Xlindvain
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-10-13 11:18:46 +02:00

This issue was referenced by 16289274ed

This issue was referenced by 16289274ed6fdae83a3fbe400698d5d40c7a5d6c
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81656
No description provided.